# tromino-puzzle

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .htmlhintrc  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODEOWNERS  LICENSE  Makefile.am  README.md  SECURITY.md  autogen.sh  azure-pipelines.yml  configure.ac  cspell.json  index.html  sonar-project.properties  vcpkg.json
.github/workflows/: c-cpp.yml  codeql-analysis.yml  devskim-analysis.yml  emscripten-build.yml  instrumentation.yml  lint.yml  linux-build.yml  linux-cmake-build.yml  macos-build.yml  msbuild.yml  msvc-code-analysis.yml  openssf-scorecard.yml  sonarcloud.yml  sonarqube.yml  windows-build.yml
benchmark/core/: tromino_bechmark.cpp  tromino_benchmark.cpp
contrib/nginx/: nginx.conf
doc/: autotools-build.md
emscripten/: .editorconfig  .eslintrc.json  Makefile  makefile
emscripten/app/: index.html
emscripten/app/scripts/: app.js  eslintrc.json  solver.js  trimino-puzzle.js  tromino-puzzle.js
emscripten/app/scripts/litro/: gfx.js  (+3 more)
emscripten/app/styles/: style.css
include/gfx2d/: board.hpp  step.hpp  style.hpp  tromino_gfx2d.hpp
include/tromino/cli/: init.hpp  params.hpp  wrapper.hpp
include/tromino/core/: tromino.h
include/tromino/gfx2d/: board.hpp  gfx2d.hpp  step.hpp  style.hpp  view_model.hpp  window.hpp
include/tromino/gui/: cli_models.hpp  cli_options.hpp  init.hpp  params.hpp
include/tromino/validation/: validation.h
include/tromino/wrapper/: callback.hpp
include/tromino_core/: tromino.h
msbuild/: .gitignore  TriminoPuzzle.sln  TrominoPuzzle.sln
msbuild/LibTromino.Test/: LibTromino.Test.vcxproj  LibTromino.Test.vcxproj.filters
msbuild/LibTromino2d/: LibTromino2d.vcxproj  LibTromino2d.vcxproj.filters
msbuild/TriminoPuzzle.Cli/: TriminoPuzzle.Cli.vcxproj
msbuild/Tromino2d/: Tromino2d.vcxproj  Tromino2d.vcxproj.filters
msbuild/TrominoCli/: TrominoCli.vcxproj  TrominoCli.vcxproj.filters
msbuild/TrominoPuzzle.Cli/: TrominoPuzzle.Cli.vcxproj  TrominoPuzzle.Cli.vcxproj.filters
msbuild/TrominoPuzzle.WchCli/: TrominoPuzzle.WchCli.vcxproj  TrominoPuzzle.WchCli.vcxproj.filters
msbuild/UnitTestsHost/: UnitTestsHost.vcxproj  UnitTestsHost.vcxproj.filters
msbuild/libtrimino/: libtrimino.vcxproj  libtrimino.vcxproj.filters
msbuild/libtromino/: libtromino.vcxproj  libtromino.vcxproj.filters
msbuild/libtromino_validation/: libtromino_validation.vcxproj  libtromino_validation.vcxproj.filters
scripts/: app.js  app.mjs  editor.js  editor.mjs
scripts/litro/: gfx.js  litro-wasm.js  litro-wasm.mjs  litro-wasm.wasm  litro.js  litro.mjs  worker.js  worker.mjs
scripts/trmn/: trmn-wasm.js  trmn-wasm.mjs  trmn-wasm.wasm  trmn.js
src/: .clang-format  Makefile.am
src/2d/: tromino_gfx.cpp  tromino_gfx.h
src/2d_gui/: init.cpp  init.h  main.cpp
src/cli/: Makefile.am  cli_models.cpp  cli_models.h  cli_models.hpp  cli_options.cpp  cli_options.h  cli_options.hpp  init.cpp  init.h  init.hpp  main.cpp  params.h  params.hpp  trmn_graph.cpp  trmn_graph.h  trmn_graph.hpp  trmn_graph_vt.cpp  trmn_graph_vt.h  trmn_graph_vt.hpp  trmn_graph_windows.cpp  trmn_graph_windows.h  trmn_graph_windows.hpp  wrapper.cpp  wrapper.hpp
src/core/: tromino.c
src/gfx2d/: Makefile.am  board.cpp  board.h  gfx2d.cpp  models.cpp  models.h  step.cpp  step.h  step.hpp  style.cpp  style.h  style.hpp  tromino_gfx2d.cpp  tromino_gfx2d.h  tromino_gfx2d.hpp  view_model.cpp  view_model.h  view_model.hpp  viewmodel.cpp  viewmodel.h  window.cpp  window.h  window.hpp
src/gfx2dfe/: Makefile.am  init.cpp  init.h
src/gui/: Makefile.am  callback.cpp  callback.h  callback.hpp  cli_models.cpp  cli_models.h  cli_models.hpp  cli_options.cpp  cli_options.h  cli_options.hpp  init.cpp  init.h  init.hpp  main.cpp  params.cpp  params.h  params.hpp  shared_state.hpp  solver.cpp  solver.h  solver_state.hpp
src/js/: app.js  app.mjs  editor.js  editor.mjs
src/js/litro/: gfx.js  gfx.mjs  litro.js  litro.mjs  worker.js  wrapper.js  wrapper.mjs
src/js/trmn/: trmn.js  trmn.mjs
src/lib/: Makefile.am  trimino.c  trimino.h  tromino.c  tromino.h
src/libtromino/: tromino.c  tromino.h
src/validation/: tromino_validation.c  tromino_validation.h  validation.c
src/wasm/: trimino_wasm.c  tromino_alg_wasm.cpp  tromino_gfx2d_wasm.cpp  tromino_wasm.c
src/wasm/litro/: libtromino_wrapper.c  litro.c  litro.h
src/wasm/trmn/: callback.cpp  callback.hpp  trmn.cpp  trmn.h  trmn.hpp
src/wch/: init.cpp  init.h  main.cpp  trmn_graph_windows.cpp  trmn_graph_windows.h
styles/: style.css
test/: .clang-format  Makefile.am  main.cpp
test/core/: tromino_2x2_unittest.cpp  tromino_4x4_unittest.cpp  tromino_64x64_unittest.cpp  tromino_stop.cpp  tromino_stop_flag.cpp  unittest_helper.cpp  unittest_helper.hpp
test/lib/: Makefile.am  testmain_libtromino.cpp  tromino_2x2_unittest.cpp  tromino_4x4_unittest.cpp  tromino_64x64_unittest.cpp  unittest_helper.cpp  unittest_helper.h
test/libtromino/: testmain_libtromino.cpp  tromino_2x2_unittest.cpp  tromino_4x4_unittest.cpp  tromino_64x64_unittest.cpp  unittest_helper.cpp  unittest_helper.h  unittest_helper.hpp
test/tromino_core/: testmain_libtromino.cpp  tromino_2x2_unittest.cpp  tromino_4x4_unittest.cpp  tromino_64x64_unittest.cpp  unittest_helper.hpp
test/validation/: tromino_validation_unittest.cpp  validation_unittest.cpp
web/app/: index.html
web/app/styles/: style.css
xcode/LibTromino.Test/LibTromino.Test.xcodeproj/: project.pbxproj
xcode/LibTromino/LibTromino.xcodeproj/: project.pbxproj
xcode/LibTromino2d/LibTromino2d.xcodeproj/: project.pbxproj
xcode/LibTrominoValidation/: Config.xcconfig
xcode/LibTrominoValidation/LibTrominoValidation.xcodeproj/: project.pbxproj
xcode/LibTrominoWrapper/LibTrominoWrapper.xcodeproj/: project.pbxproj
xcode/TriminoPuzzle.xcodeproj/: project.pbxproj
xcode/Tromino2d/Tromino2d.xcodeproj/: project.pbxproj
xcode/Tromino2d/scripts/: uni.sh
xcode/TrominoCli/TrominoCli.xcodeproj/: project.pbxproj
xcode/TrominoPuzzle.xcodeproj/: project.pbxproj
xcode/TrominoPuzzle.xcworkspace/: contents.xcworkspacedata
(+15 files in other folders)
